Fixing text align

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ footer a {
 }
 .text {
   color: lightgray;
+  text-align: justify;
 }
 .comment {
   color: darkolivegreen;
